Second batch of content

--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,11 @@ body {
     color: #36312B;
 }
 
+    .illustration {
+        max-width: 100%;
+        padding: 40px 0;
+    }
+
 .logo {
     margin: 1px 0 20px;
 }
